--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="styles.css">
   <script src="assets/semantic/dist/jquery.min.js"></script>
   <script src="assets/semantic/dist/semantic.min.js"></script>
+  <!--添加reCaptcha验证码服务-->
+  <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
   <app-root>
