--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <script src="assets/semantic/dist/jquery.min.js"></script>
   <script src="assets/semantic/dist/semantic.min.js"></script>
   <!--添加reCaptcha验证码服务-->
-  <script src='https://www.google.com/recaptcha/api.js'></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
   <app-root>
